# pointMLP-pytorch

./: .gitignore  environment.yml  pyproject.toml  test_ModelNet40.py
classification_ModelNet40/: data.py  main.py  run_training.py
classification_ModelNet40/cfgs/: config.yaml
classification_ModelNet40/models/: pointmlp.py
