[project]
name = "pointmlp-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "cycler>=0.12.1",
  "einops>=0.8.1",
  "h5py>=3.13.0",
  "matplotlib>=3.10.1",
  "open3d>=0.19.0",
  "scikit-learn>=1.6.1",
  "scipy>=1.15.2",
  "torch>=2.7.0",
  "torchvision>=0.22.0",
  "tqdm>=4.67.1",
  "wandb>=0.19.11",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
